--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_USERNAME= sql10563372
-DB_PASSWORD = AMKy7xrDUk
-DB_HOST = sql10.freesqldatabase.com
-DB_DATABASE = sql10563372
+DB_USERNAME= rodc6x3xucy37gxc
+DB_PASSWORD = hlbhlbda790i76pn
+DB_HOST = iu51mf0q32fkhfpl.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+DB_DATABASE = pugeqes15yjpd2bk
 DB_PORT = 3306
 DB_DIALECT = mysql
