--- a/.env
+++ b/.env
@@ -1,6 +1,14 @@
-DB_USERNAME= rodc6x3xucy37gxc
-DB_PASSWORD = hlbhlbda790i76pn
-DB_HOST = iu51mf0q32fkhfpl.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
-DB_DATABASE = pugeqes15yjpd2bk
+DB_USERNAME= southatoms
+DB_PASSWORD = nabuco12
+DB_HOST = root
+DB_DATABASE = missingPets
 DB_PORT = 3306
-DB_DIALECT = mysql
+DB_DIALECT = mysql 
+
+
+# DB_USERNAME= rodc6x3xucy37gxc
+#   DB_PASSWORD = hlbhlbda790i76pn
+#   DB_HOST = iu51mf0q32fkhfpl.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+#   DB_DATABASE = pugeqes15yjpd2bk
+#   DB_PORT = 3306
+#   DB_DIALECT = mysql  
