--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USERNAME= southatoms
 DB_PASSWORD = nabuco12
-DB_HOST = root
+DB_HOST = 127.0.0.1
 DB_DATABASE = missingPets
 DB_PORT = 3306
 DB_DIALECT = mysql 
