--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DB_HOST = 127.0.0.1
 DB_DATABASE = missingPets
 DB_PORT = 3306
 DB_DIALECT = mysql 
-
+WDS_SOCKET_PORT=0
 
 # DB_USERNAME= rodc6x3xucy37gxc
 #   DB_PASSWORD = hlbhlbda790i76pn
