--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^7.7.7",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
